# IBM_PROJECT

./: .dockerignore  .env.example  .gitattributes  .gitignore  AUDIT_REPORT.md  AUDIT_REPORT_V3.md  Dockerfile  README.md  TESTING_REPORT_V1_V2.md  TEST_RESULTS_AND_V2_FEEDBACK.md  git-push.bat  pyproject.toml  requirements-agent.txt  requirements.txt  result_test cases_v1_by_Gurnoor.labeled.jsonl  result_test cases_v1_by_Gurnoor.labeled_summary.json  result_test_cases_v1_by_pankaj.labeled_summary.json  result_test_cases_v2_by_gurnoor.CLEAN.dedup.jsonl  result_test_cases_v2_by_gurnoor.CLEAN.dedup_summary.json  test cases_v1_by_Gurnoor.labeled.jsonl  test_cases_v2_by_gurnoor.CLEAN.dedup.jsonl  test_cases_v2_by_gurnoor.CLEAN.jsonl
api/: Dockerfile  config.py  logging_config.py  main.py  middleware.py  security.py
config/: config.yaml
docs/: AGENT_GUIDE.md  Briefing_CheatSheet_ANURAG.txt  Briefing_CheatSheet_GURNOOR.txt  Briefing_CheatSheet_PANKAJ.txt  Briefing_CheatSheet_SANVI.txt  GETTING_STARTED.md  LLM_PROMPT.md  MODEL_AUDIT_POST_3M.md  MODEL_AUDIT_POST_TESTING.md  OPERATIONS.md  PROJECT_JOURNAL.md  REPORT_SKELETON_v1.md  REPORT_SKELETON_v2.md  REPORT_SKELETON_v3.md  TEST_CASE_GUIDE.md  V2_MODEL_DATASET_CONTEXT.md  eda_notes.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
models/: stage1_lightgbm.pkl  stage1_sparkov.pkl  stage3_isotonic.pkl
notebooks/: 01_data_exploration.ipynb
scripts/: agent_config.example.yaml  augment_sparkov_training.py  build_features.py  calibrate.py  create_admin.py  fix_techmart_admin.py  (+16 more)
(+103 files in other folders)
