[project]
name = "chimera-fd"
version = "0.1.0"
description = "Cascaded Hybrid Fraud Detection with Multi-modal Explanations and Recalibration"
authors = [
  { name = "Anurag Pandey" },
  { name = "Pankaj Singh" },
  { name = "Gurnoor Multani" },
  { name = "Sanvi Bharadwaj" },
]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
